fix empty icon position issue on mobile apps

--- a/modules/jaggery-apps/app-publisher-web/themes/appm/css/es-publisher-commons.css
+++ b/modules/jaggery-apps/app-publisher-web/themes/appm/css/es-publisher-commons.css
@@ -793,7 +793,7 @@ td.asset-listing-btn {
 .emptyAssets-MsgDiv {
     text-align: center;
     font-size: 18px;
-    padding: 40px 0;
+    padding: 55px 0;
 }
 .emptyAssets-MsgDiv .largeMsgIcon {
     font-size: 200px;
